test/samples/valid/never_loop.maruir
fun foo(a: u256): never 
{
entry:
	jump entry;
}
