test/samples/invalid/resolving/never_local.maruir
fun foo(a: u256) 
locals b: never;
{ }
